# hamcp-rs

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  compose.yml  crates.js  deny.toml  flake.nix  help.html  index.html  justfile  lefthook.yml  settings.html  src-files.js
.github/: dependabot.yml
mcp/: Cargo.toml  all.html  index.html  sidebar-items.js
mcp/models/: index.html  sidebar-items.js  struct.ApiStatus.html  struct.Calendar.html  struct.CalendarEvent.html  struct.CalendarTime.html  struct.Config.html  struct.ConfigCheckResult.html  struct.EntityState.html  struct.Event.html  struct.HealthCheckResult.html  struct.HistoryEntry.html  struct.ServiceCall.html  struct.ServiceDomain.html  struct.ServiceResponse.html  struct.StateUpdate.html  struct.TemplateRequest.html  struct.TemplateResponse.html  struct.UnitSystem.html
mcp/models/inputs/: index.html  sidebar-items.js  struct.CallServiceInput.html  struct.GetCalendarEventsInput.html  struct.GetEntityInput.html  struct.GetHistoryInput.html  struct.RenderTemplateInput.html  struct.SetStateInput.html
mcp/rest/: enum.ClientError.html  index.html  sidebar-items.js  struct.HomeAssistantClient.html  type.Result.html
mcp/src/: lib.rs  main.rs
mcp/src/models/: inputs.rs  mod.rs
mcp/src/rest/: mod.rs
mcp/src/websocket/: mod.rs
mcp/websocket/: index.html  struct.WebSocketClient.html
search.index/: 0034c9200146.js  01d09e7f62c9.js  08448eb2936a.js  0e4c02c7628c.js  0ea3191e2f93.js  1b44f0e60d71.js  1ca724772852.js  21e9fe23e47c.js  303e60b8834a.js  30f57c863026.js  (+14 more)
(+39 files in other folders)
