[package]
name = "mcp"
version = "0.0.0"
edition = "2024"

[lib]
name = "mcp"
path = "src/lib.rs"

[[bin]]
name = "mcp"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json"] }
rmcp = { version = "0.8", features = ["server", "transport-streamable-http-server"] }
schemars = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
